# deltus-dataset-comparison

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  TODO.md  mkdocs.yml  pyproject.toml
apps/web/: README.md  package.json
docs/: DOCS_ARCHITECTURE.md  DOCS_CONVENTIONS.md  DOCS_QUALITY_GATES.md  README.md
docs/contracts/: comparison-run.schema.json  comparison-suite.schema.json  result-package.schema.json
docs/governance/ci/: docs-quality-gates.yaml
docs/governance/policies/: result_contract_policy.md  source_authority_policy.md
docs/governance/tools/: check_front_matter.py
docs/pages/: index.md
docs/pages/architecture/: overview.md
docs/pages/development/: adding-source-adapters.md  implementation-plan.md  testing.md
docs/pages/getting-started/: quickstart.md
planning/: ROADMAP.md
roadmap/: README.md
roadmap/0.2.x-engine-hardening/: TODO.md
roadmap/0.3.x-report-reader-exports/: TODO.md
roadmap/0.4.x-workflow-adapters/: TODO.md
roadmap/0.5.x-team-polish/: TODO.md
roadmap/1.x.x-stable-product/: TODO.md
scripts/: copy_legacy_assets_here.md  create_sqlite_fixture.py  dev_check.sh
sql/: README.md
sql/contracts/: README.md
sql/fixtures/: mvp_fixture_tables.sql
sql/migrations/: README.md
tests/: conftest.py
tests/contract/: README.md  test_result_package_contract.py
tests/e2e/: README.md  test_api_fixture_workflow.py  test_cli_csv_workflow.py  test_cli_sqlite_workflow.py
tests/fixtures/: expected_summaries.json  mvp_cases.json  mvp_cases.sqlite
tests/integration/: README.md
(+63 files in other folders)
