[project]
name = "deltus-data-comparison"
version = "0.1.2"
description = "Regression evidence generator for heterogeneous tabular data."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "pyodbc>=5.1",
  "duckdb>=1.0",
  "polars>=1.0",
  "openpyxl>=3.1",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "jsonschema>=4.22",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
deltus = "comparison_evidence.adapters.driving.cli.main:main"
